--- a/index.html
+++ b/index.html
@@ -1,157 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
   <title>SmileBone Benefits</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Payroll tax funded wellness benefits that increase employee take-home pay and reduce employer costs.">
+  <meta property="og:title" content="SmileBone Benefits">
+  <meta property="og:description" content="Payroll tax funded wellness benefits that increase employee take-home pay and reduce employer costs.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="/assets/proof-math.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-    body {
-      font-family: 'Inter', sans-serif;
-    }
-    .bg-custom-blue { background-color: #003366; }
-    .text-custom-yellow { color: #FFC72C; }
-    .message-box {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-      padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-      display: none;
-      text-align: center;
-    }
+    :root{--sb-blue:#003366;--sb-yellow:#FFC72C}
+    *{box-sizing:border-box}
+    body{font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif}
+    .bg-custom-blue{background-color:var(--sb-blue)}
+    .text-custom-yellow{color:var(--sb-yellow)}
+    .bg-custom-yellow{background-color:var(--sb-yellow)}
+    /* Modal base + backdrop */
+    .modal-backdrop{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;z-index:40}
+    .modal{position:fixed;inset:0;display:none;z-index:50}
+    .modal[aria-hidden="false"],.modal-backdrop[data-open="true"]{display:block}
+    .visually-hidden{position:absolute;width:1px;height:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
   </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-  <!-- Custom Message Box -->
-  <div id="messageBox" class="message-box">
-    <p id="messageText" class="text-lg mb-4"></p>
-    <button onclick="closeMessageBox()" class="bg-custom-blue text-white px-4 py-2 rounded-lg hover:bg-blue-900 transition-colors">Close</button>
-  </div>
-
   <!-- Header -->
-  <header class="bg-custom-blue text-white py-10 px-12 md:px-24 flex items-center justify-between rounded-b-xl shadow-lg sticky top-0 z-50">
-    <!-- Brand -->
-    <div class="flex items-center space-x-4">
-      <span class="text-4xl font-extrabold tracking-tight">
-        SmileBone<span class="text-custom-yellow">Benefits</span>
-      </span>
+  <header class="bg-custom-blue text-white sticky top-0 z-30 shadow-lg">
+    <div class="max-w-7xl mx-auto px-5 md:px-10">
+      <div class="h-20 md:h-24 flex items-center justify-between">
+        <a href="#" class="flex items-center gap-3">
+          <span class="text-3xl md:text-4xl font-extrabold tracking-tight">SmileBone<span class="text-custom-yellow">Benefits</span></span>
+        </a>
+
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex items-center gap-10 text-lg">
+          <a href="#about" class="hover:text-custom-yellow">About</a>
+          <a href="#how-it-works" class="hover:text-custom-yellow">How It Works</a>
+          <a href="#contact" class="hover:text-custom-yellow">Contact</a>
+        </nav>
+
+        <!-- Mobile menu button -->
+        <button id="menuBtn" class="md:hidden inline-flex items-center justify-center w-11 h-11 rounded-lg bg-white/10 hover:bg-white/20 focus:outline-none focus-visible:ring-2 focus-visible:ring-white" aria-controls="mobileMenu" aria-expanded="false" aria-label="Open menu">
+          <svg id="iconOpen" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+          <svg id="iconClose" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+        </button>
+      </div>
     </div>
-    <!-- Navigation -->
-    <nav class="space-x-10 text-xl font-medium">
-      <a href="#about" class="hover:text-custom-yellow transition-colors">About Us</a>
-      <a href="#how-it-works" class="hover:text-custom-yellow transition-colors">How It Works</a>
-      <a href="#contact" class="hover:text-custom-yellow transition-colors">Contact</a>
-    </nav>
+
+    <!-- Mobile drawer -->
+    <div id="mobileMenu" class="md:hidden hidden bg-custom-blue/95 border-t border-white/10">
+      <nav class="max-w-7xl mx-auto px-5 py-4 flex flex-col gap-4 text-lg">
+        <a href="#about" class="py-2 text-white hover:text-custom-yellow">About</a>
+        <a href="#how-it-works" class="py-2 text-white hover:text-custom-yellow">How It Works</a>
+        <a href="#contact" class="py-2 text-white hover:text-custom-yellow">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <main class="container mx-auto py-8 md:py-16">
+  <main>
 
-    <!-- Hero Section -->
-    <section id="hero" class="text-center mb-16">
-      <h2 class="text-3xl md:text-5xl font-bold text-custom-blue leading-tight mb-4">
-        Boost Your Business & Empower Your Employees
-      </h2>
-      <p class="text-lg text-gray-600 max-w-3xl mx-auto mb-8">
-        Enhance your team’s benefits at no cost to your business. We turn payroll taxes into a powerful wellness program.
-      </p>
-      <a href="#contact" class="inline-block bg-custom-blue text-white text-lg font-semibold px-8 py-4 rounded-full shadow-lg hover:scale-105 transition-transform">Get Your Free Quote</a>
+    <!-- Hero -->
+    <section id="hero" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-20 text-center">
+      <h1 class="text-3xl md:text-5xl font-extrabold text-custom-blue leading-tight">Boost Your Business. Empower Your Employees.</h1>
+      <p class="mt-5 text-lg md:text-xl text-gray-600 max-w-3xl mx-auto">Turn payroll taxes into a wellness benefit that raises take-home pay and lowers employer costs. No new net cost to the business.</p>
+      <a href="#contact" class="mt-8 inline-block bg-custom-yellow text-custom-blue text-lg font-bold px-8 py-4 rounded-full shadow hover:brightness-95">Get a Free Quote</a>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="bg-white p-8 md:p-12 rounded-3xl shadow-xl mb-16">
-      <h3 class="text-2xl md:text-4xl font-bold text-center text-custom-blue mb-8">About Our Program</h3>
-      <p class="text-lg leading-relaxed mb-6">
-        The SmileBone Benefits program is designed to create a true win-win for your business and your employees. We help you unlock significant financial tax credits while simultaneously providing your team with a suite of valuable health and wellness benefits.
-      </p>
-      <ul class="list-disc list-inside space-y-2 text-lg">
-        <li>Reduce your business’s tax liability.</li>
-        <li>Increase employee take-home pay.</li>
-        <li>Enhance benefits without raising costs.</li>
-        <li>Improve morale and retention.</li>
-      </ul>
-    </section>
-
-    <!-- Benefits Image Section -->
-    <section id="benefits-image" class="bg-[#F3F8FB] py-12">
-      <div class="container mx-auto max-w-5xl px-4">
-        <img src="assets/proof-math.png"
-             alt="Businesses and employees save using payroll tax funded wellness benefits"
-             class="w-full h-auto rounded-2xl shadow-lg"
-             loading="lazy">
+    <!-- About -->
+    <section id="about" class="max-w-7xl mx-auto px-5 md:px-10">
+      <div class="bg-white p-8 md:p-12 rounded-3xl shadow-xl">
+        <h2 class="text-2xl md:text-4xl font-bold text-center text-custom-blue mb-6">About Our Program</h2>
+        <p class="text-lg leading-relaxed mb-6">The SmileBone Benefits program helps employers unlock savings while improving benefits. Employees keep more money. Employers reduce tax burden. Retention improves.</p>
+        <ul class="list-disc list-inside space-y-2 text-lg">
+          <li>Reduce employer payroll tax expense.</li>
+          <li>Increase employee take-home pay.</li>
+          <li>Enhance benefits without increasing spend.</li>
+          <li>Better morale and retention.</li>
+        </ul>
       </div>
     </section>
 
-    <!-- How It Works Section -->
-    <section id="how-it-works" class="mb-16">
-      <h3 class="text-3xl md:text-4xl font-bold text-center text-custom-blue mb-12">How It Works: A Simple 4 Step Process</h3>
-      <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transform transition-transform duration-300">
-          <h4 class="text-xl font-semibold mb-2 text-custom-blue">Step 1</h4>
-          <p class="text-gray-600">Request Your Free Quote. Tell us about your team size, payroll, and benefit goals.</p>
+    <!-- Proof image -->
+    <section id="benefits-image" class="bg-[#F3F8FB] mt-12 md:mt-16 py-10">
+      <div class="max-w-5xl mx-auto px-5">
+        <img
+          src="assets/proof-math.png"
+          alt="Illustration of employer and employee savings from payroll tax funded wellness benefits"
+          onerror="this.style.display='none'"
+          class="w-full h-auto rounded-2xl shadow-lg"
+          loading="lazy">
+      </div>
+    </section>
+
+    <!-- How it works -->
+    <section id="how-it-works" class="max-w-7xl mx-auto px-5 md:px-10 py-12 md:py-16">
+      <h2 class="text-3xl md:text-4xl font-bold text-center text-custom-blue mb-10">How It Works</h2>
+      <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6">
+        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transition-transform">
+          <h3 class="text-xl font-semibold text-custom-blue mb-2">Step 1</h3>
+          <p class="text-gray-600">Request a free quote with team size and payroll basics.</p>
         </div>
-        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transform transition-transform duration-300">
-          <h4 class="text-xl font-semibold mb-2 text-custom-blue">Step 2</h4>
-          <p class="text-gray-600">Review Your Custom Plan. We’ll show you estimated savings and program options. No obligation.</p>
+        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transition-transform">
+          <h3 class="text-xl font-semibold text-custom-blue mb-2">Step 2</h3>
+          <p class="text-gray-600">Review a savings estimate and plan options. No obligation.</p>
         </div>
-        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transform transition-transform duration-300">
-          <h4 class="text-xl font-semibold mb-2 text-custom-blue">Step 3</h4>
-          <p class="text-gray-600">Onboard Your Team. We handle all the setup, education, and compliance.</p>
+        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transition-transform">
+          <h3 class="text-xl font-semibold text-custom-blue mb-2">Step 3</h3>
+          <p class="text-gray-600">Onboarding and education handled for your team.</p>
         </div>
-        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transform transition-transform duration-300">
-          <h4 class="text-xl font-semibold mb-2 text-custom-blue">Step 4</h4>
-          <p class="text-gray-600">Start Saving. Benefits go live, your team gains, and your business saves.</p>
+        <div class="bg-white p-6 rounded-3xl shadow-xl text-center hover:scale-105 transition-transform">
+          <h3 class="text-xl font-semibold text-custom-blue mb-2">Step 4</h3>
+          <p class="text-gray-600">Benefits go live. Savings and retention follow.</p>
         </div>
       </div>
     </section>
 
-    <!-- Contact Form Section -->
-    <section id="contact" class="bg-custom-blue p-8 md:p-12 rounded-3xl shadow-xl mb-16 text-white">
-      <h3 class="text-2xl md:text-4xl font-bold text-center mb-8">Get Started</h3>
-      <p class="text-lg text-center mb-8">Fill out the form below to request your free, no-obligation quote and see how much your business can save.</p>
-      <form id="contactForm" class="max-w-xl mx-auto space-y-6">
-        <div>
-          <label for="companyName" class="block text-gray-200 font-medium mb-2">Company Name</label>
-          <input type="text" id="companyName" name="companyName" class="w-full p-3 rounded-lg shadow-inner text-black" required>
-        </div>
-        <div>
-          <label for="teamSize" class="block text-gray-200 font-medium mb-2">Team Size (Approx.)</label>
-          <input type="number" id="teamSize" name="teamSize" class="w-full p-3 rounded-lg shadow-inner text-black" required>
-        </div>
-        <div>
-          <label for="email" class="block text-gray-200 font-medium mb-2">Work Email</label>
-          <input type="email" id="email" name="email" class="w-full p-3 rounded-lg shadow-inner text-black" required>
-        </div>
-        <div>
-          <label for="phone" class="block text-gray-200 font-medium mb-2">Phone Number</label>
-          <input type="tel" id="phone" name="phone" class="w-full p-3 rounded-lg shadow-inner text-black" required>
-        </div>
-        <button type="submit" class="w-full bg-custom-yellow text-custom-blue text-lg font-bold py-4 rounded-full shadow-lg hover:scale-105 transition-transform">Submit for Free Quote</button>
-      </form>
+    <!-- Contact -->
+    <section id="contact" class="max-w-7xl mx-auto px-5 md:px-10 pb-16">
+      <div class="bg-custom-blue text-white p-8 md:p-12 rounded-3xl shadow-xl">
+        <h2 class="text-2xl md:text-4xl font-bold text-center mb-2">Get Started</h2>
+        <p class="text-lg text-center mb-8">Request a free quote. No pressure. No obligations.</p>
+
+        <form id="contactForm" class="max-w-xl mx-auto space-y-6" aria-labelledby="contactHeading">
+          <span id="contactHeading" class="visually-hidden">Contact form</span>
+
+          <label class="block">
+            <span class="block text-gray-200 font-medium mb-2">Company Name</span>
+            <input type="text" name="companyName" class="w-full p-3 rounded-lg shadow-inner text-black" required>
+          </label>
+
+          <label class="block">
+            <span class="block text-gray-200 font-medium mb-2">Team Size</span>
+            <input type="number" name="teamSize" min="1" class="w-full p-3 rounded-lg shadow-inner text-black" required>
+          </label>
+
+          <label class="block">
+            <span class="block text-gray-2 00 font-medium mb-2">Work Email</span>
+            <input type="email" name="email" class="w-full p-3 rounded-lg shadow-inner text-black" required>
+          </label>
+
+          <label class="block">
+            <span class="block text-gray-200 font-medium mb-2">Phone</span>
+            <input type="tel" name="phone" class="w-full p-3 rounded-lg shadow-inner text-black" required>
+          </label>
+
+          <button type="submit" class="w-full bg-custom-yellow text-custom-blue text-lg font-bold py-4 rounded-full shadow hover:brightness-95">Submit for Free Quote</button>
+        </form>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="text-gray-500 text-sm text-center py-6 mt-16 rounded-t-xl shadow-inner">
-    <p>&copy; 2025 SmileBone Benefits. All Rights Reserved.</p>
+  <footer class="text-gray-500 text-sm text-center py-6">
+    <p>&copy; 2025 SmileBone Benefits. All rights reserved.</p>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Modal + backdrop -->
+  <div id="backdrop" class="modal-backdrop" data-open="false" tabindex="-1" aria-hidden="true"></div>
+  <section id="modal" class="modal" role="dialog" aria-modal="true" aria-hidden="true" aria-labelledby="modalTitle" aria-describedby="modalDesc">
+    <div class="min-h-full flex items-center justify-center p-4">
+      <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-xl">
+        <h2 id="modalTitle" class="text-xl font-bold mb-2">Thank you</h2>
+        <p id="modalDesc" class="text-gray-700 mb-6">We received your request. We will contact you shortly.</p>
+        <div class="flex justify-end gap-3">
+          <button id="closeBtn" class="px-4 py-2 rounded-lg bg-gray-200 hover:bg-gray-300 text-gray-900">Close</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script>
-    function closeMessageBox() {
-      document.getElementById("messageBox").style.display = "none";
+    // Mobile nav
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+    const iconOpen = document.getElementById('iconOpen');
+    const iconClose = document.getElementById('iconClose');
+    menuBtn?.addEventListener('click', () => {
+      const open = mobileMenu.classList.contains('hidden');
+      mobileMenu.classList.toggle('hidden', !open);
+      menuBtn.setAttribute('aria-expanded', String(open));
+      iconOpen.classList.toggle('hidden', !open);
+      iconClose.classList.toggle('hidden', open);
+    });
+
+    // Modal helpers
+    const modal = document.getElementById('modal');
+    const backdrop = document.getElementById('backdrop');
+    const closeBtn = document.getElementById('closeBtn');
+    let lastFocus = null;
+
+    function openModal() {
+      lastFocus = document.activeElement;
+      modal.setAttribute('aria-hidden','false');
+      backdrop.dataset.open = 'true';
+      // focus first button
+      closeBtn?.focus();
+      document.addEventListener('keydown', onKeydown);
     }
-    document.getElementById("contactForm").addEventListener("submit", function(event) {
-      event.preventDefault();
-      document.getElementById("messageText").innerText = "Thank you! We have received your request and will be in touch shortly.";
-      document.getElementById("messageBox").style.display = "block";
-      this.reset();
+    function closeModal() {
+      modal.setAttribute('aria-hidden','true');
+      backdrop.dataset.open = 'false';
+      document.removeEventListener('keydown', onKeydown);
+      if (lastFocus) lastFocus.focus();
+    }
+    function onKeydown(e){
+      if (e.key === 'Escape') closeModal();
+    }
+    backdrop?.addEventListener('click', closeModal);
+    closeBtn?.addEventListener('click', closeModal);
+
+    // Form submit
+    const form = document.getElementById('contactForm');
+    form?.addEventListener('submit', (e) => {
+      e.preventDefault();
+      openModal();
+      form.reset();
     });
   </script>
 </body>
